[project]
name = "clishelf"
description = "cli tools and hooks on my shelf"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
keywords = ['utility', 'cli']
authors = [
    { name = "korawica", email = "korawich.anu@gmail.com" },
]
classifiers = [
    "Topic :: Utilities",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.8",
    "PyYAML>=6.0.3",
    # NOTE: Need pip package for the tomllib module and typing_extensions for
    #   Self typed-check that already provide on Python 3.11+.
    "pip; python_version <= '3.10'",
    "typing_extensions; python_version <= '3.10'",
]

[project.optional-dependencies]
test = [
    "clishelf[all]",
    "pytest",
    "requests",
    "tomli-w",
]
all = [ "pre-commit>=4.0.0" ]
latest = [
    "click==8.3.1",
    "PyYAML==6.0.3",
]

[project.urls]
Homepage = "https://github.com/korawica/clishelf/"
"Source Code" = "https://github.com/korawica/clishelf/"

[build-system]
requires = [ "pdm-backend" ]
build-backend = "pdm.backend"

[project.scripts]
shelf = "clishelf.__main__:main"

# NOTE: This line is the config for `clishelf` package
[tool.shelf.version]
version = "./clishelf/__about__.py"
changelog = "CHANGELOG.md"
files = ["README.md"]
commit_msg_format = "- {subject}"

[tool.coverage.run]
branch = true
concurrency = ["thread", "multiprocessing"]
parallel = true
context = '${CONTEXT}'
source = ["clishelf"]
omit = [
    "clishelf/__main__.py",
    "clishelf/__about__.py",
    "clishelf/cli.py",
    "script.py",
]
relative_files = true

[tool.pdm]
version = { source = "file", path = "clishelf/__about__.py" }
distribution = true

[tool.pdm.build]
excludes = [
    "/.github",
    "/.pre-commit-config.yaml",
    "/.pre-commit-hooks.yaml",
    "/script.py"
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]

[tool.pytest.ini_options]
console_output_style = "count"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.mypy]
python_version = "3.10"
files = ["clishelf"]
show_error_codes = true
pretty = true
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.black]
line-length = 80
target-version = ['py310']
exclude = """
/(
    \\.git
    | \\.__pycache__
    | \\.idea
    | \\.ruff_cache
    | \\.mypy_cache
    | \\.pytest_cache
    | \\.venv
    | \\venv
)/
"""

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"clishelf/version.py" = ["F401"]
